kc/keycloak-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
  labels:
    app: keycloak-service
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
    - name: jgroups
      port: 7800
      targetPort: 7800
      protocol: TCP
  selector:
    app: keycloak-deployment
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak-deployment
  template:
    metadata:
      labels:
        app: keycloak-deployment
    spec:
      containers:
        - name:  keycloak
          image: lwalukie/keycloakx:v0.0.27
          command: ["/opt/keycloak/bin/kc.sh", "start"]
          args: [" --auto-build",  "--cache-stack=kubernetes", "--log-level=debug", "--cache-config-file=cache-ispn-remote.xml"]
          volumeMounts:
            - name: certs
              mountPath: "/etc/certs"
              readOnly: true
            - name: config-volume
              mountPath:  /opt/keycloak/conf/cache-ispn-remote.xml 
              subPath: cache-ispn-remote.xml
            - name: config-volume
              mountPath: /opt/keycloak/conf/ispn-truststore.jks
              subPath: ispn-truststore.jks
          ports:
            - name: jgroups
              containerPort: 7600
            - name: https
              containerPort: 8443
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /health/ready
              port: 8443
            initialDelaySeconds: 60
            periodSeconds: 1
      volumes:
        - name: certs
          secret:
            secretName: auth-tls-secret
        - name: config-volume
          configMap:
            name: kc-config
